[metadata]
name = RedditPoster
version = 0.0.1
author = Theodor Obukhov
author_email = obukhov.theodor@gmail.com
description = Runs a selenium script that opens google chrome, goes to reddit, and posts in r/FindaUnit for Arma 3. Format is posted in /README.md
long_description = file: README.md
long_description_content_type = text/markdown
url =   
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.7
include_package_data = True